Made userId optional in create book and create shelf endpoints
